--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+  "start": "node ./bin/www"
+  },
+  "engines": {
+    "node": "0.12.4",
+    "npm": "2.10.1"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
