--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-  "start": "node ./bin/www"
+    "start": "node ./bin/www"
   },
   "engines": {
     "node": "0.12.4",
@@ -17,6 +17,8 @@
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
     "morgan": "~1.3.0",
+    "pg": "^4.4.1",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.5.1",
     "serve-favicon": "~2.1.3",
     "sqlite3": "^3.0.9"
