--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "node": "0.12.4",
     "npm": "2.10.1"
   },
-  "devDependencies":{
+  "devDependencies": {
     "sqlite3": "^3.0.9"
-    },
+  },
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
@@ -19,6 +19,7 @@
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
+    "method-override": "^2.3.5",
     "morgan": "~1.3.0",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
